# Programming-Language

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  program.txt  readme.md  tests.txt  todo
.github/workflows/: c-cpp.yml
docs/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
docs/src/: index.html  styles.scss
docs/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
include/astNode/: astNode.hpp
include/bootstrap/: array.bootstrap.hpp  bootstrap.hpp  map.bootstrap.hpp  string.bootstrap.hpp
include/callStack/: callStack.hpp
include/evaluable/: arrayAst.hpp  binaryOperation.hpp  bridgeFnExpr.hpp  classDecleration.hpp  conditionalOperator.hpp  dotOperator.hpp  evaluable.hpp  function.hpp  functionCall.hpp  indexing.hpp  instance.hpp  mapAst.hpp  new.hpp  numberConst.hpp  rValConst.hpp  rValueConstFactory.hpp  unaryOperation.hpp  variable.hpp
include/exception/: exception.hpp  exceptionFactory.hpp
include/interpreter/: interpreter.hpp
include/lexer/: lexer.hpp
include/modules/: console.hpp
include/operations/: assignmentOperation.hpp  bitwiseOperation.hpp  logicalOperation.hpp  mathemeticalOperation.hpp  operationTypes.hpp  relationalOperation.hpp
include/parser/: parser.hpp
include/rVal/: rVal.hpp  rValConst.hpp
include/runable/: assignment.hpp  compoundStatement.hpp  expressionStatement.hpp  forLoop.hpp  ifElse.hpp  print.hpp  program.hpp  return.hpp  runable.hpp  statement.hpp  varDecleration.hpp  whileLoop.hpp
include/rvalConst/: rValConst.hpp
include/scope/: scope.hpp
include/statement/: statement.hpp
include/symbol/: functionSymbol.hpp  symbol.hpp  symbolFactory.hpp  symbolTable.hpp  symbolTableBuilder.hpp  varSymbol.hpp
include/token/: token.hpp  tokenFactory.hpp
include/utility/: arr.util.hpp  conversionFunctions.hpp  toString.hpp
include/visitor/: visitor.hpp
src/: CMakeLists.txt
src/bootstrap/: CMakeLists.txt  bootstrap.cpp
src/callStack/: CMakeLists.txt  callStack.cpp
src/evaluable/: CMakeLists.txt  arrayAst.cpp  binaryOperation.cpp  bridgeFnExpr.cpp  classDecleration.cpp  conditionalOperation.cpp  dotOperator.cpp  function.cpp  functionCall.cpp  indexing.cpp  instance.cpp  mapAst.cpp  new.cpp  numberConst.cpp  rValConst.cpp  rValConstFactory.cpp  unaryOperation.cpp  variable.cpp
src/exception/: CMakeLists.txt  exception.cpp  exceptionFactory.cpp
src/interpreter/: CMakeLists.txt  interpreter.cpp
src/lexer/: CMakeLists.txt  lexer.cpp
src/modules/: CMakeLists.txt  console.cpp
src/operations/: CMakeLists.txt  assignmentOperation.cpp  bitwiseOperation.cpp  logicalOperation.cpp  mathemeticalOperation.cpp  relationalOperation.cpp
src/parser/: CMakeLists.txt  assignmentParser.cpp  bitwiseExpressionParser.cpp  classDeclerationParser.cpp  expressionParser.cpp  factorExpressionParser.cpp  forLoop.cpp  forLoopParser.cpp  functionParser.cpp  logicalExpressionParser.cpp  mathemeticalExpressionParser.cpp  parser.cpp  printParser.cpp  relationalExpression.cpp  runable.cpp  ternaryParser.cpp  whileLoopParser.cpp
src/rVal/: CMakeLists.txt  rVal.cpp
src/rValConst/: CmakeLists.txt  rValConst.cpp
src/runable/: CMakeLists.txt  assignment.cpp  compoundStatement.cpp  expressionStatement.cpp  forLoop.cpp  ifElse.cpp  print.cpp  program.cpp  return.cpp  statement.cpp  varDecleration.cpp  whileLoop.cpp
src/scope/: CMakeLists.txt  scope.cpp
src/statement/: CMakeLists.txt  statement.cpp
src/symbol/: CMakeLists.txt  SymbolTable.cpp  functionSymbol.cpp  symbol.cpp  symbolFactory.cpp  symbolTableBuilder.cpp  varSymbol.cpp
src/token/: CMakeLists.txt  token.cpp  tokenFactory.cpp
src/utility/: CMakeLists.txt  conversionFunctions.cpp  toString.cpp
(+79 files in other folders)
